# mncalc

./: Cargo.toml  README.md
src/: args.rs  main.rs  math.rs
